# Querious

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  api_routes.py  auth_routes.py  auth_service.py  chunk_search.py  chunk_service.py  config.py  document_routes.py  document_service.py  email_service.py  file_storage.py  fly.toml  google_oauth.py  history_utils.py  main.py  models.py  pyproject.toml  shared_utils.py  vector_db.py
.github/workflows/: deploy.yml  secrets-check.yml
docs/: production-cleanup-plan.md
frontend/: .env.example  index.html  vercel.json  vite.config.ts
frontend/public/: robots.txt
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: ConfirmationModal.tsx  ErrorBoundary.tsx  LimitModal.tsx  QualityPresetSelector.tsx  Toast.tsx  TokenLimitModal.tsx
frontend/src/constants/: pricing.ts
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx  UIContext.tsx
frontend/src/hooks/: useChats.ts  useDocuments.ts  useProjects.ts  useStreamingQuery.ts  useUploadLimits.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: ChatViewPage.tsx  ChatsPage.tsx  LandingPage.tsx  NotFoundPage.tsx  (+8 more)
helpers/: ownership.py
scripts/: debug_rag.py  list_chats.py  migrate_db.py  orphan_cleanup.py  reset_database.py  setup_auth_db.py  setup_document_db.py
tests/: README.md  conftest.py
tests/integration/: test_api.py
tests/security/: test_idor.py  test_security.py
tests/unit/: test_auth.py  test_availability.py  test_efficiency.py  test_models.py  test_robustness.py  test_scalability.py
